fixed contact spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,10 @@
     font-size: 24px;
   }
 
+  .contact-info {
+      padding: 10px;
+  }
+
   .portfolio-img {
       width: 90%;
       height: auto;
@@ -77,7 +81,6 @@
 
   .contact-info {
     display: inline;
-    padding: 10px;
 }
 
   /* footer styles */
